sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:20: error: not found: value bougerTrou
      bougerTrou(0)
      ^